WS2-1710: Fix BS5 regression: z-index for Drupal admin menu

--- a/web/themes/webspark/renovation/src/sass/base/_drupal-admin-tweaks.scss
+++ b/web/themes/webspark/renovation/src/sass/base/_drupal-admin-tweaks.scss
@@ -42,3 +42,7 @@ body .layout-builder-block {
     }
   }
 }
+
+.toolbar-oriented .toolbar-bar {
+  z-index: 1200;
+}
